didmt use linklist only used Arraylist so, updated code to meed that specifcation